--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,4 +15,5 @@ sonar.projectKey=my:project
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
+sonar.organization = sonar.aupath
 sonar.cfamily.build-wrapper-output=bw_output
