--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar-project.properties
 # must be unique in a given SonarQube instance
 sonar.projectKey=my:project
+sonar.organization = aupath
 
 # --- optional properties ---
 
@@ -15,5 +16,5 @@ sonar.projectKey=my:project
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
-sonar.organization = sonar.aupath
+
 sonar.cfamily.build-wrapper-output=bw_output
